frontend/webserver and wifi bugfixes
Signed-off-by: Marcel Teiting <marcel.teiting@t-online.de>

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
     </div>
 
     <div>
-      <button id="connectToWifi" onclick="connectToWifi()">Connect</button>
+      <button id="connectToWifi" onclick="connectToWifi()">
+        Connect
+      </button>
     </div>
 
     <script>
@@ -178,7 +180,7 @@
 
       function scanWifi() {
         sendRequest("POST", "/wifi", () => {
-          setTimeout(null, 2000);
+          setTimeout(getWifiList(), 2000);
         });
       }
 
@@ -207,6 +209,10 @@
         }
 
         for (let i = 0; i < wifiNetworks.length; i++) {
+          if (wifiNetworks[i].length == 0) {
+            continue;
+          }
+
           let newOption = document.createElement("option");
           newOption.value = wifiNetworks[i];
           newOption.text = wifiNetworks[i];
@@ -232,16 +238,22 @@
       }
 
       function connectToWifi() {
-        let password = "hardies42"; // document.getElementById();
-        let ssid = "RT-Labor-1"; //document.getElementById();
+        let wifiList = document.getElementById("wifiList");
+        let passwordInput = document.getElementById("wifiPasswordInput");
+        let selectedOptions = wifiList.options;
+        let selectedIndex = selectedOptions.selectedIndex;
+
+        let selectedOption = selectedOptions[selectedIndex].value;
+        let password = passwordInput.value;
+
         sendRequest(
           "POST",
-          `/wifiConnect?ssid=${ssid}&password=${password}`,
+          `/wifiConnect?ssid=${selectedOption}&password=${password}`,
           console.log
         );
       }
 
-      setInterval(getWifiList, 1000);
+      setInterval(getWifiList, 5000);
 
       const initialize_page = () => {
         sendRequest("GET", "/settings", (response) => {
