added toggle all & fading and color customization

--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
         />
       </div>
     </div>
+    
+    <h2>Color Offset</h2>
+    <div>
+      <p><span id="colorOffsetText">0</span></p>
+      <div class="input">
+        <input
+          type="range"
+          id="colorOffsetSlider"
+          value="0"
+          onchange="updateColorOffset()"
+          min="0"
+          max="500"
+          step="1"
+          class="slider"
+        />
+      </div>
+    </div>
+    
+    <h2>Fading</h2>
+    <div>
+      <button onclick="fadingToggle()">toggle fading</button>
+    </div>
+
+    <h2>All toggle</h2>
+    <div>
+      <button onclick="toggleAll()">Toggle toggleAll</button>
+    </div>
 
     <h2>Testing</h2>
     <div>
@@ -173,6 +200,11 @@
         );
       }
 
+      function updateColorOffset() {
+        let colorFadeOffset= document.getElementById("colorOffsetSlider");
+        sendRequest("POST", `/colorFadeOffset?value=${colorFadeOffset.value}`, console.log);
+      }
+
       function updateMicGain() {
         let micGain = document.getElementById("micGainSlider");
         sendRequest("POST", `/micGain?value=${micGain.value}`, console.log);
@@ -184,12 +216,20 @@
         });
       }
 
+      function toggleAll() {
+        sendRequest("POST", "/all_toggle", null);
+      }
+
       function simStart() {
         sendRequest("POST", "/sim_start", null);
       }
 
       function testStart() {
         sendRequest("POST", "/test_start", null);
+      }
+
+      function fadingToggle() {
+        sendRequest("POST", "/fading_toggle", null);
       }
 
       function propagate_wifi_list(response) {
@@ -262,6 +302,8 @@
           let peakDelayInput = document.getElementById("peakLedDelay");
           let micGainSlider = document.getElementById("micGainSlider");
           let micGainText = document.getElementById("micGainText");
+          let colorOffsetSlider = document.getElementById("colorOffsetSlider");
+          let colorOffsetText = document.getElementById("colorOffsetText");
 
           if (response === "") {
             return;
@@ -273,6 +315,8 @@
           micGainSlider.value = values[1];
           micGainText.textContent = values[1];
           peakDelayInput.value = values[2];
+          colorOffsetSlider.value = values[3];
+          colorOffsetText.textContent = values[3];
         });
       };
 
@@ -287,6 +331,12 @@
         let micGainText = document.getElementById("micGainText");
         micGainSlider.addEventListener("input", (event) => {
           micGainText.textContent = event.target.value;
+        });
+
+        let colorOffsetSlider = document.getElementById("colorOffsetSlider");
+        let colorOffsetText = document.getElementById("colorOffsetText");
+        colorOffsetSlider.addEventListener("input", (event) => {
+          colorOffsetText.textContent = event.target.value;
         });
 
         initialize_page();
